--- a/assets/css/extended/custom.css
+++ b/assets/css/extended/custom.css
@@ -15,7 +15,9 @@ Read https://github.com/adityatelange/hugo-PaperMod/wiki/FAQs#bundling-custom-cs
     justify-content: space-between;
     padding-left: calc(var(--content-padding) + 1.1rem); /* this was a value that I set by eye to ensure alingment between logo and text */
     @media screen and (max-width: 767px) {
-        padding-left: calc(var(--content-padding)); 
+        .header-content-wrapper {
+        padding-left: calc(var(--content-padding) - 0.5rem); /* Negative adjustment to compensate */
+        }
     }
 }
 
