--- a/layouts/shortcodes/video.html
+++ b/layouts/shortcodes/video.html
@@ -3,4 +3,5 @@
     <source src="{{ .Get "src" }}" type="video/{{ .Get "type" | default "mp4" }}">
     Your browser does not support the video tag.
   </video>
+  {{ with .Get "caption" }}<figcaption>{{ . | markdownify }}</figcaption>{{ end }}
 </div>
